--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <tr>
                     <td><b>Vertical resolution</b></td>
                     <td>
-                        <input type="range" min="100" max="500" value="300" step="10" id="simResSelY" />
+                        <input type="range" min="100" max="5000" value="300" step="10" id="simResSelY" />
                         <output id="simResShowY"></output>
                     </td>
                     <td><i id="simResYWarning" style="color:rgb(255, 61, 61); display: none;">Vertical resolutions
@@ -258,7 +258,7 @@
                 <tr>
                     <td><b>Simulation height</b></td>
                     <td>
-                        <input type="range" min="5000" max="15000" value="12000" step="100" id="simHeightSel" />
+                        <input type="range" min="5000" max="150000" value="12000" step="100" id="simHeightSel" />
                         <output id="simHeightShow"></output>
                     </td>
                     <td><i id="simHeightWarning" style="color:rgb(255, 61, 61); display: none;">Sim heights other
@@ -462,7 +462,7 @@
             <br />
             <br />
             <br />
-            <i>By Niels Daemen</i>
+            <i>By ieatmycrumbs</i>
         </div>
     </div>
 
